<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/today_btn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/iransans"
        android:text="@string/today_btn_txt"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add_btn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:text="@string/addReport_btn_txt"
        android:fontFamily="@font/iransans"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/today_btn" />

    <Button
        android:id="@+id/show_btn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:text="@string/showReport_btn_txt"
        android:fontFamily="@font/iransans"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>